samples/_failures_safe/1761042997_a960c0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_78df65c2.c: In function ‘main’:
./samples/SAFE/__tmp_78df65c2.c:199:46: error: expected ‘)’ at end of input
  199 |     if (len == 0 || (len == 1 && input_buffer
      |                     ~                        ^
      |                                              )
./samples/SAFE/__tmp_78df65c2.c:199:5: error: expected declaration or statement at end of input
  199 |     if (len == 0 || (len == 1 && input_buffer
      |     ^~
